--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,20 +1,13 @@
-# ===============================
-# DATABASE CONNECTION
-# ===============================
 
-spring.main.banner-mode=off
-spring.datasource.initialization-mode=always
-spring.datasource.platform=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/lost_animal?serverTimezone=Europe/Kiev
+spring.datasource.username=root
+spring.datasource.password=1111
 
-# ===============================
-# JPA / HIBERNATE
-# ===============================
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Fix Postgres JPA Error:
-# Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+server.port=8088
